Creates a new item-grid class from the skills-grid class and replaces the stunt stack with this new implementation. Removes the stunt.scss file as it is now empty.

--- a/system/templates/actor/parts/tabs/skills.hbs
+++ b/system/templates/actor/parts/tabs/skills.hbs
@@ -8,7 +8,7 @@
         </div>
     </header>
 
-    <div class="fatex-skill-grid{{#if options.enableColumns}} fatex-skill-grid--two-column{{/if}}">
+    <div class="fatex-item-grid fatex-item-grid--skills{{#if options.enableColumns}} fatex-item-grid--two-column{{/if}}">
         {{#each skills as |skill skillIndex|}}
             <div class="fatex__skill fatex__input--icon fatex-eb-sortable" data-item-id="{{skill._id}}">
                 <div class="fatex-headline">
