--- a/system/templates/actor/parts/sidebar/stress.hbs
+++ b/system/templates/actor/parts/sidebar/stress.hbs
@@ -1,4 +1,4 @@
-<div class="u-padding-std">
+<div class="fatex-u-padding-std">
     {{#each stress as |stress stressIndex|}}
         <div class="fatex__stress__track item {{#if stress.isDisabled}}fatex__helper--is-disabled{{/if}}" data-item-id="{{stress._id}}">
             <header class="fatex-headline fatex-eb-sortable" data-item-id="{{stress._id}}">
