--- a/system/templates/inline-sheet/parts/aspects.hbs
+++ b/system/templates/inline-sheet/parts/aspects.hbs
@@ -1,4 +1,4 @@
-<div class="u-padding-std">
+<div class="fatex-u-padding-std">
     {{#each aspects as |aspect aspectIndex|}}
         <div class="fatex-aspect fatex-eb-sortable item" data-item-id="{{aspect._id}}">
             <div class="fatex-u-pos-relative">
