--- a/system/templates/inline-sheet/parts/consequences.hbs
+++ b/system/templates/inline-sheet/parts/consequences.hbs
@@ -1,4 +1,4 @@
-<div class="u-padding-std">
+<div class="fatex-u-padding-std">
     <header class="fatex-headline">
         <h2 class="fatex-headline__text">{{localize "FAx.Sheet.Consequences"}}</h2>
         <div class="fatex__headline__actions fatex__item__actions">
