Updates the stress tracks to use the new item-grid. Removes old classes used for the stress track layout.

--- a/system/templates/actor/parts/sidebar/stress.hbs
+++ b/system/templates/actor/parts/sidebar/stress.hbs
@@ -1,4 +1,4 @@
-<div class="fatex-u-padding-std">
+<section class="fatex-item-grid fatex-u-padding-std">
     {{#each stress as |stress stressIndex|}}
         <div class="fatex__stress__track item {{#if stress.isDisabled}}fatex__helper--is-disabled{{/if}}" data-item-id="{{stress._id}}">
             <header class="fatex-headline fatex-eb-sortable" data-item-id="{{stress._id}}">
@@ -42,4 +42,4 @@
     <div class="fatex-eb-stress-add fatex-headline fatex-headline--center fatex-headline--helper">
         <h3 class="fatex-headline__text">+</h3>
     </div>
-</div>
+</section>
