Standardises the message classes, removes some unused classes from the templates and moves all of the completed components to the top level of the components folder.

--- a/src/styles/components/messages.scss
+++ b/src/styles/components/messages.scss
@@ -1,4 +1,4 @@
-.fatex__message {
+.fatex-message {
     margin: $component-padding;
     padding: $component-padding / 2;
     border: 1px solid $primary-color;
