--- a/system/templates/actor/parts/tabloid/messages.hbs
+++ b/system/templates/actor/parts/tabloid/messages.hbs
@@ -1,6 +1,6 @@
-<div class="fatex__messages">
+<div>
     {{#if isEmptyActor}}
-        <div class="fatex__message fatex__message--caution">
+        <div class="fatex-message">
             {{{localize "FAx.Sheet.Messages.EmptyActor"}}}
         </div>
     {{/if}}
