Updates the secondary skill buttons to the new action classes. Removes many old sytle declarations for skills. Adds new binding classes for the increment and decrement buttons for skill ranks.

--- a/src/styles/components/actions.scss
+++ b/src/styles/components/actions.scss
@@ -24,6 +24,12 @@
     }
 
     &--skill-secondary {
+        left: -15px;
+        top: 20px;
+        gap: 0;
+        font-size: 16px;
+        color: $primary-color;
+        text-shadow: 1px -1px 1px $sheet-background;
     }
 
     &__icon {
@@ -63,6 +69,10 @@
 
         &--expand {
             @include fa-icon($fa-var-chevron-up);
+        }
+
+        &--secondary {
+            font-family: "Fate Icons", sans-serif;
         }
 
         &--settings {
