Updates the aspects and consequences header actions to use the new action classes.

--- a/system/templates/inline-sheet/parts/consequences.hbs
+++ b/system/templates/inline-sheet/parts/consequences.hbs
@@ -1,8 +1,8 @@
 <div class="fatex-u-padding-std">
     <header class="fatex-headline">
         <h2 class="fatex-headline__text">{{localize "FAx.Sheet.Consequences"}}</h2>
-        <div class="fatex__headline__actions fatex__item__actions">
-            <span class="fatex__item__add fatex__consequence__add"></span>
+        <div class="fatex-actions fatex-actions--headline">
+            <span class="fatex-eb-consequence-add fatex-actions__icon fatex-actions__icon--add"></span>
         </div>
     </header>
 
