Removes some old input label styles and updates them to be components of the new text-input classes.

--- a/system/templates/actor/parts/tabloid/aspects.hbs
+++ b/system/templates/actor/parts/tabloid/aspects.hbs
@@ -7,10 +7,10 @@
 
 {{#each aspects as |aspect aspectIndex|}}
     <div class="fatex-aspect fatex-eb-sortable item" data-item-id="{{aspect._id}}">
-        <label class="fatex__aspect__label fatex__input__label">{{aspect.data.label}}</label>
-
         <div class="fatex-u-pos-relative">
             <div class="fatex-eb-aspect-input fatex-text-input" contenteditable="true" data-item-id="{{aspect._id}}">{{{aspect.data.value}}}</div>
+
+            <label class="fatex-text-input__label">{{aspect.data.label}}</label>
 
             <div class="fatex__aspect__actions fatex__item__actions">
                 <span class="fatex__aspect__sort fatex__item__sort"></span>
