--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -31,4 +31,17 @@ input[type="text"].fatex-text-input,
         color: $header-font-color;
         border: 0;
     }
+
+    &__label {
+        padding-left: $component-padding / 2;
+        font-size: 8px;
+        letter-spacing: 3px;
+        color: $primary-color;
+        text-transform: uppercase;
+        white-space: nowrap;
+
+        &:empty::before {
+            content: "\a0";
+        }
+    }
 }
