--- a/system/templates/inline-sheet/parts/consequences.hbs
+++ b/system/templates/inline-sheet/parts/consequences.hbs
@@ -11,10 +11,10 @@
             class="fatex-consequence fatex__input--icon fatex-eb-sortable item{{#if consequence.isCondition}} fatex__consequence--condition{{/if}}{{#if consequence.isDisabled}} fatex__helper--is-disabled{{/if}}"
             data-item-id="{{consequence._id}}"
         >
-            <label class="fatex__consequence__label fatex__input__label">{{consequence.data.label}}</label>
-
             <div class="fatex-u-pos-relative">
                 <div class="fatex-eb-consequence-input fatex-text-input" contenteditable="true" data-item-id="{{consequence._id}}">{{{consequence.data.value}}}</div>
+
+                <label class="fatex-text-input__label">{{consequence.data.label}}</label>
 
                 {{#if consequence.isConsequence}}
                     <label class="fatex__consequence__icon fatex__input__icon">{{consequence.data.icon}}</label>
