Updates the last of the headline actions to use the new classes. Fixes a small template bug in the automation templates. Removes all of the styles relating to the old headling__actions classes.

--- a/src/styles/components/actions.scss
+++ b/src/styles/components/actions.scss
@@ -19,6 +19,10 @@
         background: transparent;
     }
 
+    &--inline {
+        // Styles for item actions
+    }
+
     &--skill {
         right: 0;
     }
@@ -40,10 +44,20 @@
             @include fa-icon($fa-var-plus);
         }
 
+        &--automation,
+        &--toggle {
+            font-size: 12px;
+
+            &::before {
+                margin-right: 8px;
+            }
+        }
+
         &--collapse {
             @include fa-icon($fa-var-chevron-down);
         }
 
+        &--automation,
         &--collapse,
         &--expand,
         &--toggle {
@@ -84,12 +98,7 @@
         }
 
         &--toggle {
-            font-size: 12px;
             @include fa-icon($fa-var-sync);
-
-            &::before {
-                margin-right: 8px;
-            }
         }
     }
 }
