--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -44,4 +44,8 @@ input[type="text"].fatex-text-input,
             content: "\a0";
         }
     }
+
+    &__setting-label {
+        font-size: 10px;
+    }
 }
