--- a/system/templates/item/parts/settings/setting-editor.hbs
+++ b/system/templates/item/parts/settings/setting-editor.hbs
@@ -7,6 +7,6 @@
         <div class="fatex__setting__editor__editor">
             {{editor content=field target=fieldName button=true owner=owner editable=editable}}
         </div>
-        {{#if help}}<span class="fatex__setting__help">{{localize help}}</span>{{/if}}
+        {{#if help}}<span class="fatex-text-input__setting-label">{{localize help}}</span>{{/if}}
     </label>
 </div>
