--- a/system/templates/item/parts/settings/setting-input.hbs
+++ b/system/templates/item/parts/settings/setting-input.hbs
@@ -13,6 +13,6 @@
             {{#if dtype }}data-dtype="{{ dtype }}"{{/if}}
         />
 
-        {{#if help}}<span class="fatex__setting__help">{{localize help}}</span>{{/if}}
+        {{#if help}}<span class="fatex-text-input__setting-label">{{localize help}}</span>{{/if}}
     </label>
 </div>
