--- a/system/templates/item/parts/settings/setting-text.hbs
+++ b/system/templates/item/parts/settings/setting-text.hbs
@@ -6,6 +6,6 @@
     <label class="fatex__setting__text" for="{{ fieldName }}">
         <div contenteditable="true" class="fatex-text-input" data-edit="{{ fieldName }}">{{{field}}}</div>
 
-        {{#if help}}<span class="fatex__setting__help">{{localize help}}</span>{{/if}}
+        {{#if help}}<span class="fatex-text-input__setting-label">{{localize help}}</span>{{/if}}
     </label>
 </div>
