--- a/system/templates/actor/parts/sidebar/stress.hbs
+++ b/system/templates/actor/parts/sidebar/stress.hbs
@@ -1,8 +1,8 @@
 <section class="fatex-item-grid fatex-u-padding-std">
     {{#each stress as |stress stressIndex|}}
-        <div class="fatex__stress__track item {{#if stress.isDisabled}}fatex__helper--is-disabled{{/if}}" data-item-id="{{stress._id}}">
+        <div class="fatex__stress__track item{{#if stress.isDisabled}} fatex-u-disabled{{/if}}" data-item-id="{{stress._id}}">
             <header class="fatex-headline fatex-eb-sortable" data-item-id="{{stress._id}}">
-                <h2 class="fatex-headline__text">{{stress.name}}</h2>
+                <h3 class="fatex-headline__text">{{stress.name}}</h3>
 
                 <div class="fatex-actions fatex-actions--headline">
                     <span class="fatex-eb-item-sort fatex-actions__icon fatex-actions__icon--drag"></span>
