--- a/system/templates/apps/parts/setup/actions.hbs
+++ b/system/templates/apps/parts/setup/actions.hbs
@@ -1,21 +1,21 @@
 <div class="fatex-setup-actions">
-    <span class="fatex-eb-clear-aspects fatex-button fatex-button--light{{#unless hasAspects}} fatex-button--disabled{{/unless}}">
+    <span class="fatex-eb-clear-aspects fatex-button fatex-button--light{{#unless hasAspects}} fatex-u-disabled{{/unless}}">
         {{localize "FAx.Apps.Setup.Actions.Clear.Aspects"}}
     </span>
 
-    <span class="fatex-eb-clear-consequences fatex-button fatex-button--light{{#unless hasConsequences}} fatex-button--disabled{{/unless}}">
+    <span class="fatex-eb-clear-consequences fatex-button fatex-button--light{{#unless hasConsequences}} fatex-u-disabled{{/unless}}">
         {{localize "FAx.Apps.Setup.Actions.Clear.Consequences"}}
     </span>
 
-    <span class="fatex-eb-clear fatex-button fatex-button--clear-all fatex-button--light{{#unless hasConsequences}} fatex-button--disabled{{/unless}}">
+    <span class="fatex-eb-clear fatex-button fatex-button--clear-all fatex-button--light{{#unless hasConsequences}} fatex-u-disabled{{/unless}}">
         <span>{{localize "FAx.Apps.Setup.Actions.Clear.Everything"}}</span>
     </span>
 
-    <span class="fatex-eb-clear-skills fatex-button fatex-button--light{{#unless hasConsequences}} fatex-button--disabled{{/unless}}">
+    <span class="fatex-eb-clear-skills fatex-button fatex-button--light{{#unless hasConsequences}} fatex-u-disabled{{/unless}}">
         {{localize "FAx.Apps.Setup.Actions.Clear.Skills"}}
     </span>
 
-    <span class="fatex-eb-clear-stress fatex-button fatex-button--light{{#unless hasConsequences}} fatex-button--disabled{{/unless}}">
+    <span class="fatex-eb-clear-stress fatex-button fatex-button--light{{#unless hasConsequences}} fatex-u-disabled{{/unless}}">
         {{localize "FAx.Apps.Setup.Actions.Clear.Stress"}}
     </span>
 </div>
