--- a/system/templates/inline-sheet/parts/stress.hbs
+++ b/system/templates/inline-sheet/parts/stress.hbs
@@ -1,12 +1,13 @@
 <div class="fatex-u-padding-std">
     {{#each stress as |stress stressIndex|}}
-        <div class="fatex__inline_stress__track item {{#if stress.isDisabled}}fatex__helper--is-disabled{{/if}}" data-item-id="{{stress._id}}">
+        <div class="fatex__inline_stress__track item{{#if stress.isDisabled}} fatex-u-disabled{{/if}}" data-item-id="{{stress._id}}">
             <header class="fatex-headline fatex-eb-sortable" data-item-id="{{stress._id}}">
                 <h3 class="fatex-headeline__text">{{stress.name}}</h3>
-                <div class="fatex__headline__actions fatex__item__actions">
-                    <span class="fatex__item__sort fatex__inline_stress__sort"></span>
-                    <span class="fatex__item__settings fatex__inline_stress__settings" data-item="{{stress._id}}"></span>
-                    <span class="fatex__item__delete fatex__inline_stress__delete" data-item="{{stress._id}}"></span>
+
+                <div class="fatex-actions fatex-actions--headline">
+                    <span class="fatex-eb-item-sort fatex-actions__icon fatex-actions__icon--drag"></span>
+                    <span class="ffatex-eb-stress-settings fatex-actions__icon fatex-actions__icon--settings" data-item="{{stress._id}}"></span>
+                    <span class="fatex-eb-stress-delete fatex-actions__icon fatex-actions__icon--delete" data-item="{{stress._id}}"></span>
                 </div>
             </header>
 
