--- a/system/templates/item/parts/settings/setting-automation-boxes.hbs
+++ b/system/templates/item/parts/settings/setting-automation-boxes.hbs
@@ -1,9 +1,11 @@
 <div class="fatex__automation fatex__setting fatex__setting--min-height">
     <header class="fatex-headline">
-        <h3 class="fatex-headline__text">{{localize headline}}</span>
+        <h3 class="fatex-headline__text">{{localize headline}}</h3>
 
-        <div class="fatex__headline__actions fatex__setting__actions">
-            <span class="fatex__item__add fatex__skill__reference__create--boxes">{{localize "FAx.Item.Automation.AddSkillRef"}}</span>
+        <div class="fatex-actions fatex-actions--headline">
+            <span class="fatex-eb-create-skill-reference-boxes fatex-actions__icon fatex-actions__icon--add fatex-actions__icon--automation">
+                {{localize "FAx.Item.Automation.AddSkillRef"}}
+            </span>
         </div>
     </header>
 
