--- a/system/templates/item/parts/settings/setting-automation-skill-enable.hbs
+++ b/system/templates/item/parts/settings/setting-automation-skill-enable.hbs
@@ -2,8 +2,10 @@
     <header class="fatex-headline">
         <h3 class="fatex-headline__text">{{localize headline}}</h3>
 
-        <div class="fatex__headline__actions fatex__setting__actions">
-            <span class="fatex__item__add fatex__skill__reference__create">{{localize "FAx.Item.Automation.AddSkillRef"}}</span>
+        <div class="fatex-actions fatex-actions--headline">
+            <span class="fatex-eb-create-skill-reference fatex-actions__icon fatex-actions__icon--add fatex-actions__icon--automation">
+                {{localize "FAx.Item.Automation.AddSkillRef"}}
+            </span>
         </div>
     </header>
 
