Removes the old sort bindings which have now all been updated to the new binding classes.
Adds several new button types to account for additional icon types.

Updates the automation delete buttons to use the fatex-action classes.

Removes a tonne of old styling code.

--- a/src/styles/components/actions.scss
+++ b/src/styles/components/actions.scss
@@ -8,6 +8,16 @@
     pointer-events: none;
     z-index: 5;
 
+    &--automation-item {
+        right: $component-padding * 2;
+        top: 50%;
+        transform: translateY(-50%);
+
+        .fatex-actions__icon {
+            font-size: 14px;
+        }
+    }
+
     &--headline {
         right: 15px;
     }
