--- a/system/templates/actor/parts/tabloid/aspects.hbs
+++ b/system/templates/actor/parts/tabloid/aspects.hbs
@@ -13,9 +13,9 @@
             <label class="fatex-text-input__label">{{aspect.data.label}}</label>
 
             <div class="fatex__aspect__actions fatex__item__actions">
-                <span class="fatex__aspect__sort fatex__item__sort"></span>
-                <span class="fatex__aspect__settings fatex__item__settings" data-item="{{aspect._id}}"></span>
-                <span class="fatex__aspect__delete fatex__item__delete" data-item="{{aspect._id}}"></span>
+                <span class="fatex-eb-aspect-sort fatex-actions__icon fatex-actions__icon--drag"></span>
+                <span class="fatex-eb-aspect-settings fatex-actions__icon fatex-actions__icon--settings" data-item="{{aspect._id}}"></span>
+                <span class="fatex-eb-aspect-delete fatex-actions__icon fatex-actions__icon--delete" data-item="{{aspect._id}}"></span>
             </div>
         </div>
     </div>
