--- a/system/templates/actor/parts/tabs/skills.hbs
+++ b/system/templates/actor/parts/tabs/skills.hbs
@@ -4,7 +4,7 @@
 
         <div class="fatex__item__actions">
             <span class="fatex__item__sortrank"></span>
-            <span class="fatex__item__add fatex__skill__add"></span>
+            <span class="fatex-eb-skill-add fatex__item__add"></span>
         </div>
     </header>
 
