--- a/system/templates/actor/parts/tabs/stunts.hbs
+++ b/system/templates/actor/parts/tabs/stunts.hbs
@@ -3,7 +3,7 @@
         <h2>{{localize "FAx.Sheet.Stunts"}}</h2>
 
         <div class="fatex__item__actions">
-            <span class="fatex__item__add fatex__stunt__add"></span>
+            <span class="fatex-eb-stunt-add fatex__item__add"></span>
         </div>
     </header>
 
