--- a/system/templates/actor/parts/tabloid/consequences.hbs
+++ b/system/templates/actor/parts/tabloid/consequences.hbs
@@ -28,9 +28,9 @@
             {{/if}}
 
             <div class="fatex__consequence__actions fatex__item__actions">
-                <span class="fatex__consequence__sort fatex__item__sort"></span>
-                <span class="fatex__consequence__settings fatex__item__settings" data-item="{{consequence._id}}"></span>
-                <span class="fatex__consequence__delete fatex__item__delete" data-item="{{consequence._id}}"></span>
+                    <span class="fatex-eb-consequence-sort fatex-actions__icon fatex-actions__icon--drag"></span>
+                    <span class="fatex-eb-consequence-settings fatex-actions__icon fatex-actions__icon--settings" data-item="{{consequence._id}}"></span>
+                    <span class="fatex-eb-consequence-delete fatex-actions__icon fatex-actions__icon--delete" data-item="{{consequence._id}}"></span>
             </div>
         </div>
     </div>
