--- a/system/templates/actor/parts/tabloid/aspects.hbs
+++ b/system/templates/actor/parts/tabloid/aspects.hbs
@@ -10,13 +10,13 @@
         <div class="fatex-u-pos-relative">
             <div class="fatex-eb-aspect-input fatex-text-input" contenteditable="true" data-item-id="{{aspect._id}}">{{{aspect.data.value}}}</div>
 
-            <label class="fatex-text-input__label">{{aspect.data.label}}</label>
-
-            <div class="fatex__aspect__actions fatex__item__actions">
+            <div class="fatex-actions fatex-actions--item">
                 <span class="fatex-eb-aspect-sort fatex-actions__icon fatex-actions__icon--drag"></span>
                 <span class="fatex-eb-aspect-settings fatex-actions__icon fatex-actions__icon--settings" data-item="{{aspect._id}}"></span>
                 <span class="fatex-eb-aspect-delete fatex-actions__icon fatex-actions__icon--delete" data-item="{{aspect._id}}"></span>
             </div>
+
+            <label class="fatex-text-input__label">{{aspect.data.label}}</label>
         </div>
     </div>
 {{/each}}
