--- a/system/templates/actor/parts/tabs/stunts.hbs
+++ b/system/templates/actor/parts/tabs/stunts.hbs
@@ -2,8 +2,8 @@
     <header class="fatex-section-heading">
         <h2>{{localize "FAx.Sheet.Stunts"}}</h2>
 
-        <div class="fatex__item__actions">
-            <span class="fatex-eb-stunt-add fatex__item__add"></span>
+        <div class="fatex-actions fatex-actions--section-heading">
+            <span class="fatex-eb-stunt-add fatex-actions__icon fatex-actions__icon--add"></span>
         </div>
     </header>
 
