--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -14,7 +14,7 @@ input[type="text"].fatex-text-input,
         opacity: 0.3;
     }
 
-    &:focus ~ .fatex__item__actions {
+    &:focus ~ .fatex-actions--item {
         opacity: 0;
         pointer-events: none;
     }
