--- a/system/templates/actor/parts/tabs/skills.hbs
+++ b/system/templates/actor/parts/tabs/skills.hbs
@@ -2,9 +2,9 @@
     <header class="fatex-section-heading">
         <h2>{{localize "FAx.Sheet.Skills"}}</h2>
 
-        <div class="fatex__item__actions">
-            <span class="fatex__item__sortrank"></span>
-            <span class="fatex-eb-skill-add fatex__item__add"></span>
+        <div class="fatex-actions fatex-actions--section-heading">
+            <span class="fatex-eb-skill-sortrank fatex-actions__icon fatex-actions__icon--sort"></span>
+            <span class="fatex-eb-skill-add fatex-actions__icon fatex-actions__icon--add"></span>
         </div>
     </header>
 
